--- a/first.html
+++ b/first.html
@@ -28,7 +28,10 @@
         <!-- table tr th td -->
 
         <!-- two attributes also ( colspan and rowspan) which is used to manage rows and columns in same value thing etc.. -->
-         <!-- cellspacing=" " cellpading=" " -->
+         <!-- cellspacing=" " cellpading=" "
+          tr means table row 
+          td means table data
+          th means table heading -->
          <table border="2" cellspacing="10px">
             <tr>
                 <th>Roll No</th>
