--- a/external.html
+++ b/external.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="Externalcss.css">
 </head>
 <body>
-    <h1  class="head">Lorem ipsum dolor sit amet consectetur adipisicing elit. </h1>
+    <h1  class="head">Lorem ipsum dolor sit . </h1>
     <h1  class="which">Lorem ipsum dolor sit amet consectetur adipisicing elit. </h1>
-    <h1 >Lorem ipsum dolor sit amet consectetur adipisicing elit. </h1>
+    <h1  class="apollo" >Lorem ipsum dolor sit amet consectetur adipisicing elit. </h1>
     <h1 >Lorem ipsum dolor sit amet consectetur adipisicing elit. </h1>
     <h1 >Lorem ipsum dolor sit amet consectetur adipisicing elit. </h1>
     <h1 >Lorem ipsum dolor sit amet consectetur adipisicing elit. </h1>
