--- a/first.html
+++ b/first.html
@@ -92,6 +92,6 @@ Ye tag mobile responsive web design ke liye bahut important hai.     -->
 
  <!-- GIT HUB REPOSITORY COMMANDS direct through vs code 
   git add . 
-  git command -m "anything kuch bhi likh skte he"
+  git commit  -m "anything kuch bhi likh skte he"
   git push 
   but when we create new folder through github we can use the commands github which present in new github repository  -->
