--- a/internalCSS.html
+++ b/internalCSS.html
@@ -6,12 +6,15 @@
     <title>Document</title>
     <style>body{
         background-color:green;
+        
     }
     h1{
         background-color:red;
+        
     }
     p{
         background-color:yellow;
+        font-size: 50px;
 
     }
     button{
