--- a/first.html
+++ b/first.html
@@ -90,6 +90,8 @@ width=device-width → Page ki width ko device ki screen ke barabar kar do. (Pho
 initial-scale=1.0 → Page khulte hi normal zoom (100%) me dikhna chahiye
 Ye tag mobile responsive web design ke liye bahut important hai.     -->
 
+<!-- <div> </div>  div tag is used for grouping all tag  -->
+
  <!-- GIT HUB REPOSITORY COMMANDS direct through vs code 
   git add . 
   git commit  -m "anything kuch bhi likh skte he"
