--- a/fourth.html
+++ b/fourth.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="practice.css">
+    <link rel="stylesheet" href="fourth.css">
 </head>
 <body>
-    <h1>Ram</h1>
-    <p id="circle"></p>
-    <div class="Okk">
-    <h2> Hello</h2>
-    <p> I am from Rajgarh</p>
-    <p>from madhya pradesh</p>
+    <div class="change">
+    
+    <h1 class="square"></h1>
+    <p class="square circle"> </p>
+    <h2 class="square"></h2>
     </div>
 </body>
 </html>
