--- a/portfolio.html
+++ b/portfolio.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"> -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <!-- External CSS -->
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="style2.css">
@@ -78,5 +78,52 @@
       </ul>
     </div>
   </section> 
+  <section class="services-section">
+    <h1>Our Services</h1>
+
+    <div class="services-grid">
+      <div class="service-box">
+        <i class="fa-solid fa-laptop-code"></i>
+        <h3>Web Design</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi at.</p>
+        <a href="#">Learn More</a>
+      </div>
+
+      <div class="service-box">
+        <i class="fa-solid fa-cart-shopping"></i>
+        <h3>eCommerce</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi at.</p>
+        <a href="#">Learn More</a>
+      </div>
+
+      <div class="service-box">
+        <i class="fa-solid fa-globe"></i>
+        <h3>Web Applications</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi at.</p>
+        <a href="#">Learn More</a>
+      </div>
+
+      <div class="service-box">
+        <i class="fa-solid fa-pen-nib"></i>
+        <h3>Branding</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi at.</p>
+        <a href="#">Learn More</a>
+      </div>
+
+      <div class="service-box">
+        <i class="fa-solid fa-puzzle-piece"></i>
+        <h3>CopyWriting</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi at.</p>
+        <a href="#">Learn More</a>
+      </div>
+
+      <div class="service-box">
+        <i class="fa-solid fa-mobile-screen-button"></i>
+        <h3>Internet Security</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi at.</p>
+        <a href="#">Learn More</a>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
